apt-proxy (1.9.11.pre12) experimental; urgency=low

  * Swap maintainer/uploaders until Manuel is back
  * Fix method to redirect stdout when loading packages cache
    with apt_pkg

 -- Chris Halls <halls@debian.org>  Mon,  3 May 2004 09:40:13 +0200

apt-proxy (1.9.11) experimental; urgency=low

  * Support Release.gpg for new apt, thanks Chris Lawrence (closes: #245895)
  * Fix FTBFS when apt-proxy is not already installed,
    thanks Paul Brook (closes: #245675)

 -- Chris Halls <halls@debian.org>  Mon,  3 May 2004 09:03:15 +0200

apt-proxy (1.9.10) experimental; urgency=low

  * Rework rsync backend support to stream from rsync's temporary
    file as apt-proxy version 1 used to.  Support for rsync backends
    is now available without compiling and installing the rsync hack
    shared library.
  * Update documentation

 -- Chris Halls <halls@debian.org>  Mon, 19 Apr 2004 16:49:57 +0200

apt-proxy (1.9.9) experimental; urgency=low

  * Add support for multiple backends.  If the connection is refused
    or times out, attempt to contact the next server in the list.
  * Documentation updates

 -- Chris Halls <halls@debian.org>  Sat, 17 Apr 2004 16:44:11 +0200

apt-proxy (1.9.8) experimental; urgency=low

  * Log deletion of cache files by max_version algorithm
  * Change 'RECYCLING' message to 'Adopting new file'
    (closes: #240296)
  * Use passive FTP by default, and add configuration option passive_ftp
    (closes: #190926)
  * apt-proxy-import:
    + Fix to work with latest apt_proxy version
    + Send output to standard out
    + Add a --recursive flag to import .debs from a directory tree
    + Make log messages more informative
    + Confirm that it works with relative paths (closes: #183709)
  * Updated apt-proxy-import man page
  * README: Remove outdated section about the twisted version in sarge
  * apt-proxy.conf:
    + Update openoffice example repositories
    + Add passive_ftp example