@@ -2,7 +2,6 @@ Source: apt-proxy
 Section: admin
 Priority: extra
 Maintainer: Chris Halls <halls@debian.org>
-Uploaders: Manuel Estrada Sainz <ranty@debian.org>
 Standards-Version: 3.6.0
 Build-Depends-Indep: debhelper (>= 4.0.0), help2man, python2.3-twisted (>= 1.0.0), python2.3
 
@@ -13,8 +12,6 @@ Conflicts: apt-proxy-v2 (<= 1.9.5)
 Replaces: apt-proxy-v2 (<= 1.9.5)
 Suggests: rsync
 Description: Debian archive proxy and partial mirror builder development
- ** This package is still under development **
- .
  This is version 2 of apt-proxy which will, when ready, replace apt-proxy v1.
  .
  apt-proxy automatically builds a Debian HTTP mirror based
