@@ -52,7 +52,7 @@ cleanup_freq = 1d
 ;; Maximum age of files before deletion from the cache (seconds)
 max_age = 120d
 
-;; Maximum number of versions of a .deb to keep
+;; Maximum number of versions of a .deb to keep per distribution
 max_versions = 3
 
 ;;---------------------------------------------------------------
